# spheroids

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  pyproject.toml  r  setup.cfg  setup.py  test.py
.github/workflows/: build.yml  publish.yml
datasets/: Abstracts256_Y.npy  __init__.py  pkbd_X_fac.npy  spcauchy_Y.npy
requirements/: requirements.txt
spheroids/: model.py
spheroids.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
spheroids/cpp/: __init__.py  _estim.cpp  converter.hpp
spheroids/datasets/: Abstracts256_X.npy  pkbd_X.npy  pkbd_Y.npy  spcauchy_X.npy
spheroids/examples/: __init__.py
src/spheroids/: __init__.py  model.py
src/spheroids.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/spheroids/cpp/: __init__.py  _estim.cpp  _pkbd.cpp  _rpkbd.cpp  _scauchy.cpp  _utils.cpp  converter.hpp  old.cpp  setup.py  test.cpp  test.py  testing.R
src/spheroids/cpp/my_project.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/spheroids/distributions/: __init__.py  pkbd.py  scauchy.py
src/spheroids/test/: _pkbd.cpp  setup.py  test.py
src/spheroids/test/pkbdtest.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
