[build-system]
requires = ["setuptools", "wheel", "pybind11", "cibuildwheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spheroids"
version = "0.1.0"
description = "A package for spherical clustering and probabilistic modeling"
authors = [
    {name = "Lukas Sablica", email = "lsablica@wu.ac.at"},
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"

dependencies = [
    "pybind11",
    "numpy",
    "torch",
    "matplotlib"
]


[tool.cibuildwheel.linux]
manylinux-policy = "manylinux2014"

[tool.cibuildwheel.windows]
environment = {CIBW_ENVIRONMENT = "CXXFLAGS='/std:c++17 /openmp'"}

[tool.cibuildwheel.macos]
macosx-deployment-target = "10.15"
