[build-system]
requires = ["setuptools>=69", "wheel", "pybind11>=2.11"]
build-backend = "setuptools.build_meta"

[project]
name = "spheroids"
version = "0.4.0"
description = "A package for spherical clustering and probabilistic modeling"
authors = [
    {name = "Lukas Sablica", email = "lsablica@wu.ac.at"},
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"

dependencies = [
    "numpy",
    "torch",
    "matplotlib"
]
