[metadata]
name = spheroids
version = attr: spheroids.__version__
description = A Python package for spherical clustering models
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your.email@example.com
license = GPL-3.0-or-later
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: C++
    Topic :: Scientific/Engineering

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    numpy>=2.0.0
    torch>=2.4.0
    matplotlib>=3.9.0
    pandas>=2.0.0
    scikit-learn>=1.3.0

[options.packages.find]
where = src

[options.package_data]
spheroids = ["cpp/*.hpp", "cpp/*.cpp"]
